<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Final_a15lorenaae">
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/nome"
    android:id="@+id/textonome"
    android:inputType="textCapWords"
    android:textColor="@color/azul"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textotelefono"
        android:hint="@string/telefono"
        android:layout_below="@+id/textonome"
        android:inputType="phone"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnchamar"
        android:layout_below="@+id/textotelefono"
        android:text="Chamar"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSalario"
        android:text="@string/Salario"
        android:layout_below="@+id/btnchamar"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAudio"
        android:text="@string/Audio"
        android:layout_below="@+id/btnSalario"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnVideo"
        android:text="@string/video"
        android:layout_below="@+id/btnAudio"/>
</RelativeLayout>
