<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.a15lorenaae.final_a15lorenaae.Salariosacalcular">
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/descargar"
    android:id="@+id/btndescargar"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/procesarxml"
        android:id="@+id/btnprocesar"
        android:layout_below="@+id/btndescargar"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnpasarbdadocumento"
        android:layout_below="@+id/btnprocesar"
        android:text="@string/bdafile"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnpasarbdadocumento"
        android:text="@string/xmlsuper"
        android:id="@+id/btnsuper"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scroll"
        android:layout_below="@id/btnsuper">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textoxml"
        android:layout_below="@+id/btnprocesar"/>
    </ScrollView>


</RelativeLayout>
